--- a/index.html
+++ b/index.html
@@ -310,26 +310,27 @@
            <h1>Nuovi sconti sul PlayStation Store</h1>
            <p class="grey">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
           <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 pt-3">
               <img class="w-100" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 pt-3 ">
               <img class="w-100" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
             </div>
-            
-            <div class="col-12 col-md-4">
-              <img class="w-100" src="./img/playstation-store-free-to-play-spotlight.png alt=">
+
+            <div class="col-12 col-md-4 pt-3">
+              <img class="w-100" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
             </div>
-
           </div>
-
-
-
-
          </div>
-         
-
+       </section>
+       <section class="bg-dark-blue" id="playstation-now">
+        <div class="white container pb-4
+        py-5">
+          <img class="w-50" src="./img/ps-now-logo-two-column.png" alt="">
+         <p class="black fs-6 py-3">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+         <button class="btn bg-light-grey blue rounded-pill" type="button">Esplora PlayStation Plus</button>
+        </div>
        </section>
 
 
