--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <div class="row justify-content-center text-center">
                                         <div class="col-2 my_button">
                                            <a class="text-decoration-none" href="./bonus/ps-store.html"><img src="./bonus/img/ps-store.png" alt="icona play-station" class="w-75 p-2">
-                                            <p>PS5</p></a>
+                                            <p>PS Store</p></a>
                                         </div>
                                         <div class="col-2 my_button mx-2">
                                             <img src="./img/play-menu-ico.png" alt="icona play-station" class="w-75">
